fixes player display clipping

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ p {
 .player-info {
   margin: 1em 1em 0;
   width: 12rem;
-  height: 12rem;
+  height: 10rem;
 }
 
 #board-visuals {
